# plugin.video.librarygenie

./: .gitignore  .replit  CONTEXT_MENU_DOCUMENTATION.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  EXTERNAL_AI_SEARCH_ENDPOINTS.md  FAVORITES_SYNCING_DOCUMENTATION.md  FUTURE_WORK.md  INFO_HIJACK_DOCUMENTATION.md  KODI_ADDON_GUIDE.md  LIBRARY_SCAN_OPTIMIZATION.md  LICENSE  LOCAL_SEARCH_DOCUMENTATION.md  NAVIGATION_AND_CONTEXT_GUIDE.md  README.md  REPLIT.md  SKIN_CONTROL_MAPPINGS.md  TOOLS_OPTIONS_DOCUMENTATION.md  addon.xml  context.py  contextmenu.py  debug_kodi_favorites.py  future_art.md  launcher.py  listitem_setting.md  main.py  menu_builder.py  plugin.py  process_one_id.py  pyproject.toml  pyrightconfig.json  refactor_layout.sh  remote_server_endpoints.md  renumber_all_strings.py  renumber_strings.py  replit.md  resources.lib.core.directory_builder.py  resources.lib.core.route_handlers.py  search.py  search_program.py  (+8 more)
attached_assets/: Pasted-2025-02-04-15-00-27-552-T-7380-error-general-EXCEPTION-Thrown-PythonToCppException-Pyth-1738710060111.txt  Pasted-2025-02-04-15-04-04-636-T-21264-error-general-EXCEPTION-Thrown-PythonToCppException-Pyth-1738710268510.txt
docs/: context_menu_integration.md  data_sources.md  database_schema.md  favorites_import.md  kodi_community_announcement.md  refacor_plan.md  remote_api_interactions.md  replit_setup.md
lib/: __init__.py  addon.py  xmltodict.py
lib/auth/: __init__.py  auth_helper.py  device_code.py  otp_auth.py  (+2 more)
new_work/: add_feature.md
resources/: context.xml  navigation_dialog.xml  refactor_layout.sh  settings.xml
(+232 files in other folders)
